k8s/services/indy-oracle-api-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: indy-oracle-api-svc
spec:
  selector:
    app: indy-oracle
    tier: api
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
