k8s/services/indy-oracle-ui-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: indy-oracle-ui-svc
spec:
  selector:
    app: indy-oracle
    tier: ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
