k8s/services/indy-oracle-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: indy-oracle-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: indy-oracle-ip
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - indy-oracle.com
      secretName: secret-tls
  rules:
  - host: indy-oracle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-1-kong-proxy-svc
          servicePort: 80
