k8s/services/indy-oracle-ui-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: indy-oracle-ui-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: indy-oracle-ip
    ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - indy-oracle.com
    secretName: secret-tls
  rules:
    - host: indy-oracle.com
      http:
        paths:
        - path: /api
          backend:
            serviceName: indy-oracle-api-svc
            servicePort: 8080
        - path: /
          backend:
            serviceName: indy-oracle-ui-svc
            servicePort: 80
        - path: /*
          backend:
            serviceName: indy-oracle-ui-svc
            servicePort: 80
